@@ -2,6 +2,7 @@ package com.utilitybilling.apigateway.security;
 
 import io.jsonwebtoken.*;
 import jakarta.servlet.FilterChain;
+import jakarta.servlet.ServletException;
 import jakarta.servlet.http.*;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
@@ -10,6 +11,7 @@ import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
+import java.io.IOException;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -20,31 +22,33 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
 	private String secret;
 
 	@Override
-	protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain chain) {
+	protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain chain)
+			throws IOException, ServletException {
 
-		try {
-			String header = request.getHeader("Authorization");
+		String header = request.getHeader("Authorization");
 
-			if (header != null && header.startsWith("Bearer ")) {
-				String token = header.substring(7);
+		if (header != null && header.startsWith("Bearer ")) {
+			String token = header.substring(7);
 
+			try {
 				Claims claims = Jwts.parser().setSigningKey(secret).parseClaimsJws(token).getBody();
 
 				String username = claims.getSubject();
 				List<String> roles = claims.get("roles", List.class);
 
-				var authorities = roles.stream().map(r -> new SimpleGrantedAuthority("ROLE_" + r))
-						.collect(Collectors.toList());
+				var authorities = roles.stream().map(SimpleGrantedAuthority::new).toList();
 
 				var auth = new UsernamePasswordAuthenticationToken(username, null, authorities);
 
 				SecurityContextHolder.getContext().setAuthentication(auth);
+
+			} catch (JwtException e) {
+				response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
+				return;
 			}
-
-			chain.doFilter(request, response);
-
-		} catch (Exception e) {
-			response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
 		}
+
+		chain.doFilter(request, response);
 	}
+
 }
